--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
         <h6>
           <a
             target="_blank"
-            href="https://www.google.com/maps/place/Bannerghatta+Toll+Plaza/@12.8485662,77.5894533,17.59z/data=!4m15!1m8!3m7!1s0x3bae6ac4118aa827:0xd0612b84eac47d4!2sBannerghatta+Rd,+Karnataka!3b1!8m2!3d12.7943684!4d77.6209533!16s%2Fg%2F1tcyjh1n!3m5!1s0x3bae6ae961b3fd21:0xcdca5b6d489c5f5!8m2!3d12.8500321!4d77.5907382!16s%2Fg%2F11bw1zcmfg?entry=ttu&g_ep=EgoyMDI1MDMwNC4wIKXMDSoASAFQAw%3D%3D"
-            >Banngerhatta Road , Banglore</a
+            href="https://www.google.com/search?q=mumbai+mashtra&rlz=1C1RXQR_enIN1115IN1115&oq=mumbai+mashtra&gs_lcrp=EgZjaHJvbWUyBggAEEUYOTIHCAEQABiABDIICAIQABgWGB4yCAgDEAAYFhgeMggIBBAAGBYYHjIICAUQABgWGB4yCAgGEAAYFhgeMggIBxAAGBYYHjIICAgQABgWGB4yCAgJEAAYFhge0gEIOTkyM2owajeoAgCwAgA&sourceid=chrome&ie=UTF-8#eim=CAE"
+            >Mumbai, Maharashtra</a
           >
         </h6>
         <h4>Email</h4>
