Update contact information and credits in index.html

--- a/index.html
+++ b/index.html
@@ -165,18 +165,20 @@
         <h1>Connect With Us</h1>
       </div>
       <div id="fr">
-        <h4>Address</h4>
+        <h4>Offiec Address</h4>
         <h6>
           <a
             target="_blank"
-            href="https://www.google.com/search?q=mumbai+mashtra&rlz=1C1RXQR_enIN1115IN1115&oq=mumbai+mashtra&gs_lcrp=EgZjaHJvbWUyBggAEEUYOTIHCAEQABiABDIICAIQABgWGB4yCAgDEAAYFhgeMggIBBAAGBYYHjIICAUQABgWGB4yCAgGEAAYFhgeMggIBxAAGBYYHjIICAgQABgWGB4yCAgJEAAYFhge0gEIOTkyM2owajeoAgCwAgA&sourceid=chrome&ie=UTF-8#eim=CAE"
-            >Mumbai, Maharashtra</a
+            href="https://www.google.com/search?q=mb+green+court+mumbai+bhiwandi&sca_esv=fce822f8d25e1daa&sxsrf=ANbL-n4G3PNY5uohv1p6VVtWc148e5HtuA%3A1769839355106&ei=-5p9aYeWBsyWseMPltzhmAE&ved=0ahUKEwjH_8ewjbWSAxVMS2wGHRZuGBMQ4dUDCBE&uact=5&oq=mb+green+court+mumbai+bhiwandi&gs_lp=Egxnd3Mtd2l6LXNlcnAiHm1iIGdyZWVuIGNvdXJ0IG11bWJhaSBiaGl3YW5kaTIFECEYoAEyBRAhGJ8FSNEgUOIFWIkecAF4AZABAJgB1wGgAcISqgEGMC4xNC4yuAEDyAEA-AEBmAIRoALCE8ICChAAGLADGNYEGEfCAgYQABgWGB7CAggQABiABBiiBMICCBAAGKIEGIkFwgIEECEYFZgDAIgGAZAGCJIHBjEuMTIuNKAHyzyyBwYwLjEyLjS4B74TwgcGMC41LjEyyAc_gAgA&sclient=gws-wiz-serp"
+            >MB Green Court, Bhiwandi, Thane, Maharashtra</a
           >
         </h6>
+        <h4>Place of Operation</h4>
+        <h6>Maharashtra, Karnataka, Tamil Nadu</h6>
         <h4>Email</h4>
         <h6>
           <a target="_blank" href="mailto:sales@hasinteriors.in"
-            >sales@hasinteriors.in</a
+            >ayazsaify@gmail.com</a
           >
         </h6>
         <h4>Phone Number</h4>
@@ -184,22 +186,22 @@
       </div>
     </div>
     <div id="creds" onclick="hideSidebar()">
-      <h5>This Website was crafted by TheApex</h5>
+      <h5>This Website was crafted by <a href="https://theflauxmedia.in/">TheFlauxMedia</a></h5>
       <h5>
         Contact Details :
-        <a target="_blank" href="mailto:theapexdev5@gmail.com"
-          >theapexdev5@gmail.com</a
+        <a target="_blank" href="mailto:theflauxmedia@gmail.com"
+          >theflauxmedia@gmail.com</a
         >
       </h5>
     </div>
     <div id="page6" onclick="hideSidebar()">
       <div class="crdt">
-        <h5>This Website was crafted by TheApex</h5>
+        <h5>This Website was crafted by <a href="https://theflauxmedia.in/">TheFlauxMedia</a></h5>
         <h6>
           <br />
           Email :
-          <a target="_blank" href="mailto:theapexdev5@gmail.com"
-            >theapexdev5@gmail.com</a
+          <a target="_blank" href="mailto:theflauxmedia@gmail.com"
+            >theflauxmedia@gmail.com</a
           >
         </h6>
       </div>
@@ -220,3 +222,4 @@
     <script src="./script.js"></script>
   </body>
 </html>
+
